Skeleton for enforcing bans and modes on managed channels (WIP)
This only implements the ability to set bans and modes and persist them to the database. It does NOT actually enforce bans or modes yet.